# ftm-inspect

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml
ftm_stmt/: __init__.py
tests/: test_statements.py
